overlapping div resolved

--- a/css/search_holiday_style.css
+++ b/css/search_holiday_style.css
@@ -29,18 +29,14 @@ body{
 table{
     
     border-spacing: 1px;
-    /* height: auto; */
     text-align: center;
-    /* overflow-y: scroll;
-    scroll-behavior: smooth;  */
-    max-height: 300px ;
     padding: 10px;
     max-width: 595px;
     border-collapse: separate;
 }
 
 th,td{
-    padding: 10px 30px  10px 10px;
+    padding: 15px 15px  15px 15px;
     position: sticky;
 }
 th{
@@ -52,19 +48,17 @@ th{
 
     max-height: 300px;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     scroll-behavior: smooth;
 
 }
-.publicHoliday-table1{
-    max-height: 300px;
-    /* max-width: 300px; */
-    width: 100%;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
+.public-holiday{
+    max-height: 550px;
+    overflow-y: auto;
 }
+
 .row2-col2 {
-    /* max-height: 300px;  */
+    max-height: 300px; 
     overflow-y: auto; 
 }
 tr:nth-child(even) {
